Create Navbar. Close #7

--- a/html/feedback.html
+++ b/html/feedback.html
@@ -8,6 +8,15 @@
     <title>Feedback</title>
 </head>
 <body>
-    <button class="button is-info">Click me</button>
+    <nav class="navbar">
+        <div class="navbar-brand">
+            <h1 class="title">Pomethium</h1>
+        </div>
+        <div class="navbar-menu navbar-end">
+            <a href="index.html" class="navbar-item">Home</a>
+            <a href="/html/aboutUs.html" class="navbar-item">About Us</a>
+            <a href="/html/feedback.html" class="navbar-item">Feedback</a>
+        </div>
+    </nav>
 </body>
 </html>
