--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <title>AboutUs</title>
+    <title>About Us</title>
 </head>
 <body>
-    <button type="submit">Submit</button>
+    <nav class="navbar">
+        <div class="navbar-brand">
+            <h1 class="title">Pomethium</h1>
+        </div>
+        <div class="navbar-menu navbar-end">
+            <a href="../index.html" class="navbar-item">Home</a>
+            <a href="/html/aboutUs.html" class="navbar-item">About Us</a>
+            <a href="/html/feedback.html" class="navbar-item">Feedback</a>
+        </div>
+    </nav>
 </body>
 </html>
