Create Home page stucture. Close #8

--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
             <a href="/html/feedback.html" class="navbar-item">Feedback</a>
         </div>
     </nav>
+
+    <h1 class = "title">Choose a map</h1>
+    <div class="columns">
+        <div class="column">
+            <p class="bd-notification is-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </div>
+          <div class="column">
+            <p class="bd-notification is-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+          </div>
+    </div>
+
 </body>
 </html>
