--- a/html/feedback.html
+++ b/html/feedback.html
@@ -13,9 +13,9 @@
             <h1 class="title">Pomethium</h1>
         </div>
         <div class="navbar-menu navbar-end">
-            <a href="index.html" class="navbar-item">Home</a>
-            <a href="/html/aboutUs.html" class="navbar-item">About Us</a>
-            <a href="/html/feedback.html" class="navbar-item">Feedback</a>
+            <a href="../index.html" class="navbar-item">Home</a>
+            <a href="aboutUs.html" class="navbar-item">About Us</a>
+            <a href="feedback.html" class="navbar-item">Feedback</a>
         </div>
     </nav>
 </body>
