Create Feedback page structure. Close #9

--- a/html/feedback.html
+++ b/html/feedback.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
-            <h1 class="title">Pomethium</h1>
+            <h1 class="title">Promethium</h1>
         </div>
         <div class="navbar-menu navbar-end">
             <a href="../index.html" class="navbar-item">Home</a>
@@ -18,5 +18,18 @@
             <a href="feedback.html" class="navbar-item">Feedback</a>
         </div>
     </nav>
+
+    <div class="box">
+        <label for="fName" class="label">Full name</label>
+        <input class="input" type="text" placeholder="Your name...">
+        <br><br>
+        <label for="email" class="label">E-mail</label>
+        <input class="input" type="text" placeholder="Your e-mail...">
+        <br><br>
+        <label for="text" class="label">Message</label>
+        <textarea class="textarea" placeholder="Your message..."></textarea>
+        <br>
+        <button class="button">Submit</button>
+      </div>
 </body>
 </html>
