--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
-            <h1 class="title">Pomethium</h1>
+            <h1 class="title">Promethium</h1>
         </div>
         <div class="navbar-menu navbar-end">
             <a href="../index.html" class="navbar-item">Home</a>
