--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -12,26 +12,29 @@
         <div class="navbar-brand">
             <h1 class="title">Promethium</h1>
         </div>
+
         <div class="navbar-menu navbar-end">
             <a href="../index.html" class="navbar-item">Home</a>
             <a href="aboutUs.html" class="navbar-item">About Us</a>
             <a href="feedback.html" class="navbar-item">Feedback</a>
         </div>
     </nav>
+
 <br><br>
+
         <div class="columns">
             <div class ="bd-notification">
-             <div class="column">
-                <div class="card">
-                    <div class="card-image">
-                      <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                      </figure>
-                    </div>
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                 <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            </figure>
+                        </div>
                     <div class="card-content">
                       <div class="media">
-                        <div class="media-left">
-                        </div>
+                        <div class="media-left"></div>
+
                         <div class="media-content">
                           <h1 class= "title">Name and Class</h1>
                           <p class="subtitle">Email</p>
