--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head  class = "has-background">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Home</title>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-brand">
-            <h1 class="title">Promethium</h1>
+            <h1 class="title navbar-item">Promethium</h1>
         </div>
         <div class="navbar-menu navbar-end">
             <a href="index.html" class="navbar-item">Home</a>
@@ -19,15 +19,20 @@
         </div>
     </nav>
 
-    <h1 class = "title">Choose a map</h1>
+    <h1 class = "title is-2">Choose a map</h1>
     <div class="columns">
         <div class="column">
-            <p class="bd-notification is-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="bd-notification">
+                <h2 class = "title">History</h2>
+                <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
           </div>
           <div class="column">
-            <p class="bd-notification is-info">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="bd-notification">
+                <h2 class="title">Geography</h2>
+                <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
           </div>
     </div>
-
 </body>
 </html>
