Fix columns in Home page. Close #18

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
     <h1 class = "title is-2 mt-2">Choose a map</h1>
     
     <div class= "columns is-mobile is-multiline is-centered">
-        <div id = "history" class="column is-narrow has-background-danger m-6">
+        <div id = "history" class="column is-narrow has-background-danger is-two-fifths m-6">
                 <h2 class = "title">History</h2>
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
           </div>
 
-          <div id = "geography" class="column is-narrow has-background-success m-6">
+          <div id = "geography" class="column is-narrow has-background-success is-two-fifths m-6">
                 <h2 class="title">Geography</h2>
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
           </div>
