--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -4,18 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <title>About Us</title>
+    <link rel="stylesheet" href="../css/aboutUs.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-brand">
-            <h1 class="title">Promethium</h1>
-        </div>
+  <nav class="navbar has-shadow">
+    <div class="navbar-brand">
+        <h1 id="navbar-brandTitle" class="navbar-item">Promethium</h1>
 
+        <a class="navbar-burger" data-target="navMenu" aria-expanded="false">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+          </a>
+    </div>
+    </div>
         <div class="navbar-menu navbar-end">
           <a href="feedback.html" class="navbar-item">Feedback</a>
-            <a href="aboutUs.html" class="navbar-item">About Us</a>
+          <a href="aboutUs.html" id= "active" class="navbar-item">About Us</a>
             <a href="../index.html" class="navbar-item">Home</a>
         </div>
     </nav>
