Fix About us background page. Close #19

--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class = "has-background">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="../css/aboutUs.css">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/aboutUs.css">
+    <script src="../script/script.js"></script>
+    <title>About Us</title>
 </head>
 <body>
   <nav class="navbar has-shadow">
@@ -26,6 +27,8 @@
             <a href="../index.html" class="navbar-item">Home</a>
         </div>
     </nav>
+
+    <h1 class = "title is-2 mt-2">Who are we?</h1>
 
 <br><br>
 
