--- a/html/feedback.html
+++ b/html/feedback.html
@@ -40,5 +40,13 @@
         <br>
         <button class="button">Submit</button>
       </div>
+      <footer class="footer is-flex is-align-items-flex-start  is-flex-wrap-wrap ">
+        <div class = "content has-text-centered is-align-items-center">
+            <p>Copyright ©, 2022. All right reserved</p>
+        </div>
+        <figure class="image is-128x128 is-pulled-right ">
+            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+          </figure>
+    </footer>
 </body>
 </html>
