--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
           </div>
     </div>
+    <footer class="footer is-flex is-align-items-flex-start  is-flex-wrap-wrap ">
+        <div class = "content has-text-centered is-align-items-center">
+            <p>Copyright ©, 2022. All right reserved</p>
+        </div>
+        <figure class="image is-128x128 is-pulled-right ">
+            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
+          </figure>
+    </footer>
 
     
 </body>
