--- a/html/feedback.html
+++ b/html/feedback.html
@@ -14,7 +14,7 @@
         <div class="navbar-brand">
             <h1 id="navbar-brandTitle" class="navbar-item">Promethium</h1>
     
-            <a class="navbar-burger" data-target="navMenu" aria-expanded="false">
+            <a class="navbar-burger" data-target="navMenu" aria-expanded="false" onclick = "document.querySelector('.navbar-menu').classList.toggle('is-active');">
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
