--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -32,23 +32,21 @@
 
 <br><br>
 
-        <div class="columns">
+        <div class="columns is-mobile is-centered">
             <div class ="bd-notification">
-                <div class="column">
+                <div class="column-is-narrow m-2">
                     <div class="card">
                         <div class="card-image">
-                            <figure class="image is-4by3">
+                            <figure class="image is-square">
                                  <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                             </figure>
                         </div>
                     <div class="card-content">
                       <div class="media">
-                        <div class="media-left"></div>
-
                         <div class="media-content">
-                          <h1 class= "title">Name and Class</h1>
-                          <p class="subtitle">Email</p>
-                          <p class= "subtitle">Role</p>
+                          <h1 class= "title has-text-white">Name and Class</h1><br>
+                          <p class="subtitle has-text-white">Email</p>
+                          <p class= "subtitle has-text-white">Role</p>
                         </div>
                       </div>
                     </div>
@@ -59,21 +57,19 @@
             <br><br>
 
             <div class ="bd-notification">
-                <div class="column">
+              <div class="column-is-narrow m-2">
                    <div class="card">
                        <div class="card-image">
-                         <figure class="image is-4by3">
+                         <figure class="image is-square">
                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                          </figure>
                        </div>
                        <div class="card-content">
                          <div class="media">
-                           <div class="media-left">
-                           </div>
                            <div class="media-content">
-                             <h1 class= "title">Name and Class</h1>
-                             <p class="subtitle">Email</p>
-                             <p class= "subtitle">Role</p>
+                            <h1 class= "title has-text-white">Name and Class</h1><br>
+                            <p class="subtitle has-text-white">Email</p>
+                            <p class= "subtitle has-text-white">Role</p>
                            </div>
                          </div>
                        </div>
@@ -84,21 +80,19 @@
             <br><br>
 
                 <div class ="bd-notification">
-             <div class="column">
+                  <div class="column-is-narrow m-2">
                 <div class="card">
                     <div class="card-image">
-                      <figure class="image is-4by3">
+                      <figure class="image is-square">
                         <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                       </figure>
                     </div>
                     <div class="card-content">
                       <div class="media">
-                        <div class="media-left">
-                        </div>
                         <div class="media-content">
-                          <h1 class= "title">Name and Class</h1>
-                          <p class="subtitle">Email</p>
-                          <p class= "subtitle">Role</p>
+                          <h1 class= "title has-text-white">Name and Class</h1><br>
+                          <p class="subtitle has-text-white">Email</p>
+                          <p class= "subtitle has-text-white">Role</p>
                         </div>
                       </div>
                     </div>
@@ -109,21 +103,19 @@
             <br><br>
 
             <div class ="bd-notification">
-                <div class="column">
+              <div class="column-is-narrow m-2">
                    <div class="card">
                        <div class="card-image">
-                         <figure class="image is-4by3">
+                         <figure class="image is-square">
                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                          </figure>
                        </div>
                        <div class="card-content">
                          <div class="media">
-                           <div class="media-left">
-                           </div>
                            <div class="media-content">
-                             <h1 class= "title">Name and Class</h1>
-                             <p class="subtitle">Email</p>
-                             <p class= "subtitle">Role</p>
+                            <h1 class= "title has-text-white">Name and Class</h1><br>
+                            <p class="subtitle has-text-white">Email</p>
+                            <p class= "subtitle has-text-white">Role</p>
                            </div>
                          </div>
                        </div>
