Change footer structure

--- a/html/feedback.html
+++ b/html/feedback.html
@@ -42,13 +42,15 @@
         <button class="button is-focused" id = "buttonHover">Submit</button>
         </div> 
       </div>
-      <footer class="footer is-flex is-align-items-flex-start  is-flex-wrap-wrap ">
+      <footer class="footer">
         <div class = "content has-text-centered is-align-items-center">
-            <p>Copyright ©, 2022. All right reserved</p>
+            <p>Our socials are:</p>
         </div>
-        <figure class="image is-128x128 is-pulled-right ">
-            <img class="is-rounded" src="https://bulma.io/images/placeholders/128x128.png">
-          </figure>
-    </footer>
+            <image src = "" alt = "twitterIcon">
+            <image src = "" alt = "instagramIcon">
+            <image src = "" alt = "gitHubIcon">
+            <image src = "" alt = "youTubeIcon">
+            <image src = "" alt = "facebookIcon">
+       </footer>
 </body>
 </html>
