Fix gaps in About us page. Close #32

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="navbar-brand">
             <h1 id="navbar-brandTitle" class="navbar-item">Promethium</h1>
 
-            <a class="navbar-burger" data-target="navMenu" aria-expanded="false" onclick = "document.querySelector('.navbar-menu').classList.toggle('is-active');">
+            <a class="navbar-burger" data-target="navMenu" aria-expanded="false" >
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
                 <span aria-hidden="true"></span>
