--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -32,96 +32,72 @@
 
 <br><br>
 
-        <div class="columns is-mobile is-centered">
-            <div class ="bd-notification">
-                <div class="column-is-narrow m-2">
-                    <div class="card">
-                        <div class="card-image">
-                            <figure class="image is-square">
-                                 <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                            </figure>
-                        </div>
-                    <div class="card-content">
-                      <div class="media">
-                        <div class="media-content">
-                          <h1 class= "title has-text-white">Name and Class</h1><br>
-                          <p class="subtitle has-text-white">Email</p>
-                          <p class= "subtitle has-text-white">Role</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-             </div>
+        <div class="columns is-centered">
 
+          <div class="column is-one-fifth is-narrow-tablet">
+            <div class="card">
+                <div class="card-image">
+                  <figure class="image is-4by3">
+                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                  </figure>
+                </div>
+                <div class="card-content">
+                     <h1 class= "title has-text-white">Name and Class</h1><br>
+                     <p class="subtitle has-text-white">Email</p>
+                     <p class= "subtitle has-text-white">Role</p>
+                </div>
+              </div>
+            </div>  
             <br><br>
 
-            <div class ="bd-notification">
-              <div class="column-is-narrow m-2">
+              <div class="column is-one-fifth is-narrow-tablet">
                    <div class="card">
                        <div class="card-image">
-                         <figure class="image is-square">
+                         <figure class="image is-4by3">
                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                          </figure>
                        </div>
                        <div class="card-content">
-                         <div class="media">
-                           <div class="media-content">
                             <h1 class= "title has-text-white">Name and Class</h1><br>
                             <p class="subtitle has-text-white">Email</p>
                             <p class= "subtitle has-text-white">Role</p>
-                           </div>
-                         </div>
                        </div>
                      </div>
                    </div>
-                </div>
                 
             <br><br>
 
-                <div class ="bd-notification">
-                  <div class="column-is-narrow m-2">
+                <div class="column is-one-fifth is-narrow-tablet">
                 <div class="card">
                     <div class="card-image">
-                      <figure class="image is-square">
+                      <figure class="image is-4by3">
                         <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                       </figure>
                     </div>
                     <div class="card-content">
-                      <div class="media">
-                        <div class="media-content">
                           <h1 class= "title has-text-white">Name and Class</h1><br>
                           <p class="subtitle has-text-white">Email</p>
                           <p class= "subtitle has-text-white">Role</p>
-                        </div>
-                      </div>
                     </div>
                   </div>
                 </div>
-             </div>
                     
             <br><br>
 
-            <div class ="bd-notification">
-              <div class="column-is-narrow m-2">
+              <div class="column is-one-fifth is-narrow-tablet">
                    <div class="card">
                        <div class="card-image">
-                         <figure class="image is-square">
+                         <figure class="image is-4by3">
                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
                          </figure>
                        </div>
                        <div class="card-content">
-                         <div class="media">
-                           <div class="media-content">
                             <h1 class= "title has-text-white">Name and Class</h1><br>
                             <p class="subtitle has-text-white">Email</p>
                             <p class= "subtitle has-text-white">Role</p>
-                           </div>
-                         </div>
                        </div>
                      </div>
                    </div>
-                </div>
         </div>
         <footer class="footer">
           <div class = "content has-text-centered is-align-items-center">
