Link geoMap.html to index.html

--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
           </div>
 
-          <div id = "geography" class="column is-narrow has-background-success is-two-fifths m-6">
+          
+            <div id = "geography" class="column is-narrow has-background-success is-two-fifths m-6" >
+                <a href = "html/geoMap.html">
                 <h2 class="title">Geography</h2>
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-          </div>
+                </a>
+            </div>
+          
     </div>
 
     <footer class="footer">
