Add history map. Close #37

--- a/html/hisMap.html
+++ b/html/hisMap.html
@@ -20,7 +20,7 @@
 
     <div id = "map">Map</div>
 
-    <script src = "../script/geoScript.js"></script>
+    <script src = "../script/hisScript.js"></script>
     
     <br><br>
 
