Make navbar and footer responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Home</title>
 </head>
 <body>
-    <nav class="navbar has-shadow">
+    <nav class="navbar has-shadow" id="navbar">
         <div class="navbar-brand">
             <h1 id="navbar-brandTitle" class="navbar-item">Promethium</h1>
 
@@ -32,6 +32,7 @@
     
     <div class= "columns is-mobile is-multiline is-centered">
         <div id = "history" class="column is-narrow has-background-danger is-two-fifths m-6">
+                <a href = "html/hisMap.html">
                 <h2 class = "title">History</h2>
                 <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
           </div>
