--- a/html/feedback.html
+++ b/html/feedback.html
@@ -10,7 +10,7 @@
     <title>Feedback</title>
 </head>
 <body>
-    <nav class="navbar has-shadow" id="navbar">
+    <nav class="navbar has-shadow">
         <div class="navbar-brand">
             <h1 id="navbar-brandTitle" class="navbar-item">Promethium</h1>
     
