Add History and Geography description. Close #38

--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
         <div id = "history" class="column is-narrow has-background-danger is-two-fifths m-6">
                 <a href = "html/hisMap.html">
                 <h2 class = "title">History</h2>
-                <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class = "subtitle">In the History map you can see three of the capital cities of Bulgaria in the past</p>
           </div>
 
           
             <div id = "geography" class="column is-narrow has-background-success is-two-fifths m-6" >
                 <a href = "html/geoMap.html">
                 <h2 class="title">Geography</h2>
-                <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <p class = "subtitle">In Geography map you can see three natural wonders in Bulgaria</p>
                 </a>
             </div>
           
