--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -38,13 +38,13 @@
             <div class="card">
                 <div class="card-image">
                   <figure class="image is-4by3">
-                    <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                    <img src="../Images/PetyaStoyanova.jpg" alt="Petya Stoyanova image">
                   </figure>
                 </div>
                 <div class="card-content">
-                     <h1 class= "title has-text-white">Name and Class</h1><br>
-                     <p class="subtitle has-text-white">Email</p>
-                     <p class= "subtitle has-text-white">Role</p>
+                     <h1 class= "title has-text-white">Petya Stoyanova 9G</h1><br>
+                     <p class="subtitle has-text-white">PGStoyanova20@codingburgas.bg</p>
+                     <p class= "subtitle has-text-white">Scrum trainer</p>
                 </div>
               </div>
             </div>  
@@ -54,13 +54,13 @@
                    <div class="card">
                        <div class="card-image">
                          <figure class="image is-4by3">
-                           <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                           <img src="../Images/IvanGeorgiev.png" alt="Ivan Georgiev image">
                          </figure>
                        </div>
                        <div class="card-content">
-                            <h1 class= "title has-text-white">Name and Class</h1><br>
-                            <p class="subtitle has-text-white">Email</p>
-                            <p class= "subtitle has-text-white">Role</p>
+                            <h1 class= "title has-text-white">Ivan Georgiev 9G</h1><br>
+                            <p class="subtitle has-text-white">IKGeorgiev20@codingburgas.bg</p>
+                            <p class= "subtitle has-text-white">Frontend developer</p>
                        </div>
                      </div>
                    </div>
@@ -71,13 +71,13 @@
                 <div class="card">
                     <div class="card-image">
                       <figure class="image is-4by3">
-                        <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                        <img src="../Images/AleksandraPetrova.jpg" alt="Aleksandra Petrova image">
                       </figure>
                     </div>
                     <div class="card-content">
-                          <h1 class= "title has-text-white">Name and Class</h1><br>
-                          <p class="subtitle has-text-white">Email</p>
-                          <p class= "subtitle has-text-white">Role</p>
+                          <h1 class= "title has-text-white">Aleksandra Petrova 9V</h1><br>
+                          <p class="subtitle has-text-white">APPetrova20@codingburgas.bg</p>
+                          <p class= "subtitle has-text-white">Backend developer</p>
                     </div>
                   </div>
                 </div>
@@ -88,13 +88,13 @@
                    <div class="card">
                        <div class="card-image">
                          <figure class="image is-4by3">
-                           <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                           <img src="../Images/GalyaIvanova.jpg" alt="Galya Ivanova image">
                          </figure>
                        </div>
                        <div class="card-content">
-                            <h1 class= "title has-text-white">Name and Class</h1><br>
-                            <p class="subtitle has-text-white">Email</p>
-                            <p class= "subtitle has-text-white">Role</p>
+                            <h1 class= "title has-text-white">Galya Ivanova 9G</h1><br>
+                            <p class="subtitle has-text-white">GAIvanova20@codingburgas.bg</p>
+                            <p class= "subtitle has-text-white">Designer</p>
                        </div>
                      </div>
                    </div>
