Fix hisMap coordinates

--- a/html/hisMap.html
+++ b/html/hisMap.html
@@ -28,7 +28,7 @@
 
     <div class = "columns is-centered">
         <div class = "column box is-one-quarter is-narrow-tablet m-6">
-            <h2 class = "title is-4">Milnik</h2>
+            <h2 class = "title is-4">Melnik</h2>
             <hr>
             <p class = "subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <img src="https://bulma.io/images/placeholders/128x128.png" alt="Krushuna Waterfalls" class = "image is-square is-paddingless is-fullwidth">
