--- a/html/geoMap.html
+++ b/html/geoMap.html
@@ -7,6 +7,7 @@
 
         <title>Geography map</title>
         
+        <link rel="icon" href="../Images/logo.png">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/geoMap.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
